<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="text"
        android:text="@string/enterTxt"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPersonName"
        android:text="@string/enterName"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="phone"
        android:text="@string/phone"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="number"
        android:text="@string/number"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:text="@string/pass"
        android:autofillHints="no"
        tools:ignore="LabelFor" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textEmailAddress"
        android:text="@string/mail"
        android:ems="20"
        android:autofillHints="no"
        tools:ignore="LabelFor" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:selectedWeekBackgroundColor="#ff0000"
        android:weekNumberColor="#0000ff"
        android:weekSeparatorLineColor="#00ff00" />

</LinearLayout>